# mepin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  inference_example.ipynb  pyproject.toml
ckpt/: cyclo_G.ckpt  cyclo_L.ckpt  t1x_G.ckpt  t1x_L.ckpt
mepin/config/: geodesic.yaml  maxflux_xtb.yaml
mepin/data/: reaction_path.py
mepin/experiment/: train.py
mepin/model/: layers.py  loss.py  models.py  modules.py  potentials.py
mepin/tools/: frechet.py  geometry.py  inference.py
scripts/: pretrain_cyclo_L.sh  pretrain_t1x_L.sh  train_cyclo_G.sh  train_cyclo_L.sh  train_t1x_G.sh  train_t1x_L.sh
